syntax = "proto3";
package Cratis.Chronicle.Contracts.Projections;
import "google/protobuf/empty.proto";
import "protobuf-net/bcl.proto"; // schema for protobuf-net's handling of core .NET types

enum AutoMap {
   Inherit = 0;
   Disabled = 1;
   Enabled = 2;
}
message ChildrenDefinition {
   string IdentifiedBy = 1;
   repeated KeyValuePair_EventType_FromDefinition From = 2;
   repeated KeyValuePair_EventType_JoinDefinition Join = 3;
   map<string,ChildrenDefinition> Children = 4;
   FromEveryDefinition All = 5;
   FromEventPropertyDefinition FromEventProperty = 6;
   repeated KeyValuePair_EventType_RemovedWithDefinition RemovedWith = 7;
   repeated KeyValuePair_EventType_RemovedWithJoinDefinition RemovedWithJoin = 8;
   AutoMap AutoMap = 9;
}
message DraftReadModelDefinition {
   string ContainerName = 1;
   string Schema = 2;
   string Identifier = 3;
   string DisplayName = 4;
}
message EventType {
   string Id = 1;
   uint32 Generation = 2;
   bool Tombstone = 3;
}
message FromDefinition {
   map<string,string> Properties = 1;
   string Key = 2;
   string ParentKey = 3;
}
message FromDerivativesDefinition {
   repeated EventType EventTypes = 1;
   FromDefinition From = 2;
}
message FromEventPropertyDefinition {
   EventType Event = 1;
   string PropertyExpression = 2;
}
message FromEveryDefinition {
   map<string,string> Properties = 1;
   bool IncludeChildren = 2;
   AutoMap AutoMap = 3;
}
message GenerateDeclarativeCodeRequest {
   string EventStore = 1;
   string Namespace = 2;
   string Declaration = 3;
   DraftReadModelDefinition DraftReadModel = 4;
}
message GenerateModelBoundCodeRequest {
   string EventStore = 1;
   string Namespace = 2;
   string Declaration = 3;
   DraftReadModelDefinition DraftReadModel = 4;
}
message GeneratedCode {
   string Code = 1;
}
message GetAllDeclarationsRequest {
   string EventStore = 1;
}
message GetAllDefinitionsRequest {
   string EventStore = 1;
}
message IEnumerable_ProjectionDefinition {
   repeated ProjectionDefinition items = 1;
}
message IEnumerable_ProjectionWithDeclaration {
   repeated ProjectionWithDeclaration items = 1;
}
message IndexDefinition {
   string PropertyPath = 1;
}
message JoinDefinition {
   string On = 1;
   map<string,string> Properties = 2;
   string Key = 3;
}
message KeyValuePair_EventType_FromDefinition {
   EventType Key = 1;
   FromDefinition Value = 2;
}
message KeyValuePair_EventType_JoinDefinition {
   EventType Key = 1;
   JoinDefinition Value = 2;
}
message KeyValuePair_EventType_RemovedWithDefinition {
   EventType Key = 1;
   RemovedWithDefinition Value = 2;
}
message KeyValuePair_EventType_RemovedWithJoinDefinition {
   EventType Key = 1;
   RemovedWithJoinDefinition Value = 2;
}
message OneOf_GeneratedCode_ProjectionDeclarationParsingErrors {
   GeneratedCode Value0 = 1;
   ProjectionDeclarationParsingErrors Value1 = 2;
}
message OneOf_ProjectionPreview_ProjectionDeclarationParsingErrors {
   ProjectionPreview Value0 = 1;
   ProjectionDeclarationParsingErrors Value1 = 2;
}
message PreviewProjectionRequest {
   string EventStore = 1;
   string Namespace = 2;
   string EventSequenceId = 3; // default value could not be applied: event-log
   string Declaration = 4;
   DraftReadModelDefinition DraftReadModel = 5;
}
message ProjectionDeclarationParsingErrors {
   repeated ProjectionDeclarationSyntaxError Errors = 1;
}
message ProjectionDeclarationSyntaxError {
   string Message = 1;
   int32 Line = 2;
   int32 Column = 3;
}
message ProjectionDefinition {
   string EventSequenceId = 1;
   string Identifier = 2;
   string ReadModel = 3;
   bool IsActive = 4;
   bool IsRewindable = 5;
   string InitialModelState = 6;
   repeated KeyValuePair_EventType_FromDefinition From = 7;
   repeated KeyValuePair_EventType_JoinDefinition Join = 8;
   map<string,ChildrenDefinition> Children = 9;
   repeated FromDerivativesDefinition FromEvery = 10;
   FromEveryDefinition All = 11;
   FromEventPropertyDefinition FromEventProperty = 12;
   repeated KeyValuePair_EventType_RemovedWithDefinition RemovedWith = 13;
   repeated KeyValuePair_EventType_RemovedWithJoinDefinition RemovedWithJoin = 14;
   SerializableDateTimeOffset LastUpdated = 15;
   repeated string Tags = 16;
   AutoMap AutoMap = 17;
}
enum ProjectionOwner {
   None = 0;
   Client = 1;
   Server = 2;
}
message ProjectionPreview {
   repeated string ReadModelEntries = 1;
   ReadModelDefinition ReadModel = 2;
}
message ProjectionWithDeclaration {
   string Identifier = 1;
   string ContainerName = 2;
   string Declaration = 3;
}
message ReadModelDefinition {
   ReadModelType Type = 1;
   string ContainerName = 2;
   string DisplayName = 3;
   SinkDefinition Sink = 4;
   string Schema = 5;
   repeated IndexDefinition Indexes = 6;
   ReadModelObserverType ObserverType = 7;
   string ObserverIdentifier = 8;
   ReadModelOwner Owner = 9;
   ReadModelSource Source = 10;
}
enum ReadModelObserverType {
   NotSet = 0;
   Reducer = 1;
   Projection = 2;
}
enum ReadModelOwner {
   None = 0;
   Client = 1;
   Server = 2;
}
enum ReadModelSource {
   Unknown = 0;
   Code = 1;
   User = 2;
}
message ReadModelType {
   string Identifier = 1;
   uint32 Generation = 2;
}
message RegisterRequest {
   string EventStore = 1;
   ProjectionOwner Owner = 2;
   repeated ProjectionDefinition Projections = 3;
}
message RemovedWithDefinition {
   string Key = 1;
   string ParentKey = 2;
}
message RemovedWithJoinDefinition {
   string Key = 1;
}
message SaveProjectionRequest {
   string EventStore = 1;
   string Namespace = 2;
   string EventSequenceId = 3; // default value could not be applied: event-log
   string Declaration = 4;
   DraftReadModelDefinition DraftReadModel = 5;
}
message SaveProjectionResult {
   repeated ProjectionDeclarationSyntaxError Errors = 1;
}
message SerializableDateTimeOffset {
   int64 Ticks = 1;
   double OffsetMinutes = 2;
}
message SinkDefinition {
   .bcl.Guid ConfigurationId = 1; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   .bcl.Guid TypeId = 2; // default value could not be applied: 00000000-0000-0000-0000-000000000000
}
service Projections {
   rpc GenerateDeclarativeCode (GenerateDeclarativeCodeRequest) returns (OneOf_GeneratedCode_ProjectionDeclarationParsingErrors);
   rpc GenerateModelBoundCode (GenerateModelBoundCodeRequest) returns (OneOf_GeneratedCode_ProjectionDeclarationParsingErrors);
   rpc GetAllDeclarations (GetAllDeclarationsRequest) returns (IEnumerable_ProjectionWithDeclaration);
   rpc GetAllDefinitions (GetAllDefinitionsRequest) returns (IEnumerable_ProjectionDefinition);
   rpc Preview (PreviewProjectionRequest) returns (OneOf_ProjectionPreview_ProjectionDeclarationParsingErrors);
   rpc Register (RegisterRequest) returns (.google.protobuf.Empty);
   rpc Save (SaveProjectionRequest) returns (SaveProjectionResult);
}
